# src/routes/private.router.js
@@ -8,7 +8,6 @@ const {
   deleteEnvio,
   updateEnvio,
 } = require("../controllers/envios.controller");
-const categoryController = require("../controllers/category.controller");
 const usersController = require("../controllers/users.controller");
 
 // Aplicar middleware de autenticación a todas las rutas privadas
@@ -25,9 +24,6 @@ router.get("/envios/:id", getEnvioById);
 router.put("/envios/:id", updateEnvio);
 
 router.delete("/envios/:id", deleteEnvio); // Eliminar envios
-
-// Categorías
-router.get("/categories", categoryController.getCategories);
 
 // Usuarios - Cambio de plan
 router.put("/users/plan", usersController.updatePlan);
